--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
     <uses-permission android:name="android.permission.WRITE_OWNER_DATA" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 添加快捷方式 -->
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
+    <!-- &lt;!&ndash; 移除快捷方式 &ndash;&gt; -->
+    <!-- <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" /> -->
+    <!-- &lt;!&ndash; 查询快捷方式 &ndash;&gt; -->
+    <!-- <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" /> -->
     <!-- for explorer -->
     <application
         android:allowBackup="true"
@@ -25,44 +31,62 @@
             android:theme="@style/Normal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.sjj.echo.explorer.ExplorerActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="resource/folder"/>
+            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="org.openintents.action.VIEW_DIRECTORY"/>-->
+                <!--<category android:name="android.intent.category.DEFAULT"/>-->
+                <!--<data android:scheme="file"/>-->
+            <!--</intent-filter>-->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.sjj.echo.umsinterface.ShortcutActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".MountInfoActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Light.Dialog" />-->
-        <!--<activity-->
-            <!--android:name=".MountActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Light.Dialog" />-->
-        <!--<activity-->
-            <!--android:name=".HelpActivity"-->
-            <!--android:theme="@style/DialogTransparent" />-->
-        <!--<activity-->
-            <!--android:name=".NewImageActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Light.Dialog" />-->
+        <!-- <activity -->
+        <!-- android:name=".MountInfoActivity" -->
+        <!-- android:theme="@style/Theme.AppCompat.Light.Dialog" /> -->
+        <!-- <activity -->
+        <!-- android:name=".MountActivity" -->
+        <!-- android:theme="@style/Theme.AppCompat.Light.Dialog" /> -->
+        <!-- <activity -->
+        <!-- android:name=".HelpActivity" -->
+        <!-- android:theme="@style/DialogTransparent" /> -->
+        <!-- <activity -->
+        <!-- android:name=".NewImageActivity" -->
+        <!-- android:theme="@style/Theme.AppCompat.Light.Dialog" /> -->
 
         <receiver
             android:name=".DownLoadReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
-                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
