--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.sjj.echo.umsinterface"
-        minSdkVersion 19
+        minSdkVersion 15
         targetSdkVersion 23
-        versionCode 8
-        versionName "1.3.2"
+        versionCode 9
+        versionName "1.3_ultimate"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
