--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.sjj.echo.umsinterface"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 9
-        versionName "1.3_ultimate"
+        versionCode 10
+        versionName "1.3.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
